<resources>
    <string name="app_name"> Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guests</string>
    <string name="nav_header_subtitle">My list of guests here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_all_guests">All the guests</string>
    <string name="menu_presents">Presents</string>
    <string name="menu_absents">Absents</string>
    <string name="menu_guest_form">Add New Guest</string>

    <string name="name">Name</string>
    <string name="presence">Presence</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>

    <string name="save">Save</string>
    <string name="guest_name_hint">Enter guest name here</string>
    <string name="remove">REMOVE</string>

    <string name="delete_alert_title">Remove Guest</string>
    <string name="delete_alert_message">Are you sure you want to remove this guest?</string>
    <string name="delete_alert_yes">Yes</string>
    <string name="delete_alert_no">No</string>
    <string name="delete_alert_success">Successfully removed</string>

</resources>