<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="me.jhones.guests.views.AllGuestsFragment"
        android:label="@string/menu_all_guests"
        tools:layout="@layout/fragment_all_guests" >
        <action
            android:id="@+id/action_nav_all_guests_to_nav_guests_form"
            app:destination="@id/nav_guests_form" />
    </fragment>

    <fragment
        android:id="@+id/nav_presents"
        android:name="me.jhones.guests.views.PresentsFragment"
        android:label="@string/menu_presents"
        tools:layout="@layout/fragment_presents" />

    <fragment
        android:id="@+id/nav_absents"
        android:name="me.jhones.guests.views.AbsentsFragment"
        android:label="@string/menu_absents"
        tools:layout="@layout/fragment_absents" />
    <fragment
        android:id="@+id/nav_guests_form"
        android:name="me.jhones.guests.views.GuestsFormFragment"
        android:label="@string/menu_guest_form"
        tools:layout="@layout/fragment_guest_form" >
        <action
            android:id="@+id/action_nav_guests_form_to_nav_all_guests"
            app:destination="@id/nav_all_guests" />
        <argument
            android:name="Data"
            app:argType="integer" />
    </fragment>
</navigation>